# Godot-Style-Transfer

./: .gitignore  README.md
2d-platformer-demo/: README.md  game.gd.uid  game_singleplayer.tscn  game_splitscreen.gd.uid  game_splitscreen.tscn  game_viewport.tscn  model.pth  my_custom_node.gd  my_custom_node.gd.uid  project.godot
2d-platformer-demo/.godot/: extension_list.cfg
2d-platformer-demo/.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache10  filesystem_update4  game_viewport.tscn-editstate-d7fdadaae80d8b26d86b5e56397d876b.cfg  game_viewport.tscn-folding-d7fdadaae80d8b26d86b5e56397d876b.cfg  project_metadata.cfg  quick_open_dialog_cache.cfg  script_editor_cache.cfg
2d-platformer-demo/addons/artsyn/: ArtSyn_extension.gdextension  ArtSyn_extension.gdextension.uid  README.md  bin_gpu_onnx_cuda_link_backup  plugin.cfg  plugin.gd  plugin.gd.uid
2d-platformer-demo/addons/artsyn/models/: model.pth
2d-platformer-demo/enemy/: enemy.gd.uid  enemy.tscn
2d-platformer-demo/gui/: coins_counter.gd.uid  coins_counter.tscn  pause_menu.gd.uid  pause_menu.tscn
2d-platformer-demo/level/: coin.gd.uid  coin.tscn  level.gd.uid
2d-platformer-demo/player/: bullet.gd.uid  bullet.tscn  gun.gd.uid  player.gd.uid  player.tscn
ArtSyn_extension/: BUILDING.md  CMakeLists.txt  SConstruct  build_extension.sh  copy_runtime_deps.cmake  libtorch_style_transfer_backend.cpp  libtorch_style_transfer_backend.hpp  my_custom_node.cpp  my_custom_node.hpp  my_custom_node.os  onnx_style_transfer_backend.cpp  onnx_style_transfer_backend.hpp  package_addon.sh  style_transfer_backend.hpp  style_transfer_backend_factory.cpp  style_transfer_backend_factory.hpp
Real-Time-Style-Transfer/: README.md  test_style_transfer.py  test_style_transfer_quality.py  train.py  train_with_testloss_plotting.py
Real-Time-Style-Transfer/network/: normal.py  slim.py
docs/: distribution-roadmap.md  install-and-release-guide.md
